2007-02-03  Don Allingham  <don@gramps-project.org>
	* configure.in: update version, process new Makefile.am files
	* src/GrampsDb/Makefile.am: update
	* src/Makefile.am: update

2007-01-26 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/GrampsDb/Makefile.am: remove files
	* src/GrampsDb/_GrampsDbConst.py: add license
	* src/GrampsLocale/__init__.py: add license
	* src/GrampsLocale/Makefile.am: add makefile
	* src/BasicUtils/__init__.py: add license
	* src/BasicUtils/Makefile.am: add makefile
	* src/GrampsDbUtils/__init__.py: add license
	* src/GrampsDbUtils/Makefile.am: add makefile
	* src/GrampsDbUtils/_GrampsDbWRFactories.py: add license
	* src/Makefile.am: add new directories
	
2007-01-26 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/ViewManager.py: refactor GrampsDb and clean RelLib deps
	* src/Exporter.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_WriteGrdb.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GrampsDbBase.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_ReadGedcom.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_ReadXML.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GrampsDbFactories.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/__init__.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GrampsDbExceptions.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GrampsDbConst.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_WriteGedcom.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GedcomInfo.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_ReadGrdb.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_WriteXML.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/gedcomimport.glade: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GrampsXMLDB.py: refactor GrampsDb and clean RelLib deps
	* src/GrampsDb/_GedTokens.py: refactor GrampsDb and clean RelLib deps