@@ -1,4 +1,9 @@
 2007-02-03  Don Allingham  <don@gramps-project.org>
+	* src/GrampsDb/_GrampsDbBase.py: convert DbState to its own file
+	* src/GrampsDb/__init__.py: convert DbState to its own file
+	* src/DbState.py: convert DbState to its own file
+	* src/gramps_main.py: convert DbState to its own file
+	* src/Makefile.am: convert DbState to its own file
 	* configure.in: update version, process new Makefile.am files
 	* src/GrampsDb/Makefile.am: update
 	* src/Makefile.am: update
